--- a/flask-on-docker/services/web/requirements.txt
+++ b/flask-on-docker/services/web/requirements.txt
@@ -1,3 +1,29 @@
+backcall==0.2.0
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+decorator==4.4.2
+docopt==0.6.2
 Flask==1.1.2
-flask_sqlalchemy==2.4.4
+Flask-SQLAlchemy==2.4.4
 gunicorn==20.0.4
+idna==2.10
+itsdangerous==1.1.0
+jedi==0.17.2
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+pipreqs==0.4.10
+prompt-toolkit==3.0.6
+ptyprocess==0.6.0
+Pygments==2.6.1
+requests==2.24.0
+six==1.15.0
+SQLAlchemy==1.3.18
+traitlets==4.3.3
+urllib3==1.25.10
+wcwidth==0.2.5
+Werkzeug==1.0.1
+yarg==0.1.9
